--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-mesto-auth",
+  "name": "react-mesto-api-full_frontend",
   "version": "0.1.0",
-  "homepage": "https://YellowBlueVase.github.io/react-mesto-auth",
+  "homepage": "https://github.com/YellowBlueVase/react-mesto-api-full.git/frontend",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
