--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,7 @@
   "bugs": {
     "url": "https://github.com/YellowBlueVase/react-mesto-api-full.git/issues"
   },
-  "homepage": "https://github.com/YellowBlueVase/react-mesto-api-full.git/backend",
+  "homepage": ".",
   "devDependencies": {
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
