--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-mesto-api-full_backend",
+  "name": "express-mesto-gha",
   "version": "1.0.0",
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
   "main": "index.js",
@@ -16,15 +16,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YellowBlueVase/react-mesto-api-full.git"
+    "url": "git+https://github.com/YellowBlueVase/express-mesto-gha.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/YellowBlueVase/react-mesto-api-full.git/issues"
+    "url": "https://github.com/YellowBlueVase/express-mesto-gha/issues"
   },
-  "homepage": ".",
+  "homepage": "https://github.com/YellowBlueVase/express-mesto-gha#readme",
   "devDependencies": {
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
