--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,12 @@
   },
   "homepage": "https://github.com/YellowBlueVase/express-mesto-gha#readme",
   "devDependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "celebrate": "^15.0.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "escape-html": "^1.0.3",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -33,22 +39,16 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
-    "supertest": "^6.3.3",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
-    "celebrate": "^15.0.1",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.3",
-    "escape-html": "^1.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-winston": "^4.2.0",
     "helmet": "^6.0.1",
+    "jest": "^29.3.1",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
     "validator": "^13.7.0",
     "winston": "^3.8.2"
   },
@@ -57,6 +57,7 @@
     "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "escape-html": "^1.0.3",
     "express": "^4.18.2",
