--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-mesto-gha",
+  "name": "react-mesto-api-full",
   "version": "1.0.0",
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
   "main": "index.js",
@@ -16,39 +16,31 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YellowBlueVase/express-mesto-gha.git"
+    "url": "git+https://github.com/YellowBlueVase/react-mesto-api-full"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/YellowBlueVase/express-mesto-gha/issues"
+    "url": "https://github.com/YellowBlueVase/react-mesto-api-full"
   },
-  "homepage": "https://github.com/YellowBlueVase/express-mesto-gha#readme",
+  "homepage": "https://github.com/YellowBlueVase/react-mesto-api-full#readme",
   "devDependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
-    "escape-html": "^1.0.3",
     "eslint": "^8.31.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
     "express-winston": "^4.2.0",
-    "helmet": "^6.0.1",
     "jest": "^29.3.1",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "nodemon": "^2.0.20",
-    "supertest": "^6.3.3",
     "validator": "^13.7.0",
     "winston": "^3.8.2"
   },
@@ -59,11 +51,8 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "escape-html": "^1.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
     "express-winston": "^4.2.0",
-    "helmet": "^6.0.1",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
