--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,10 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^5.2.0",
     "react-scripts": "5.0.1",
-    "require-resolve": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,17 +36,12 @@
     ]
   },
   "devDependencies": {
-    "assert": "^2.0.0",
-    "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
-    "gh-pages": "^4.0.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
-    "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.0"
+    "stream-http": "^3.2.0"
   }
 }
