--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,26 @@
 {
-  "name": "react-mesto-api-full",
+  "name": "react-mesto-api-full (backend part)",
   "version": "1.0.0",
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "lint": "npx eslint .",
-    "debug": "node app.js"
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/YellowBlueVase/react-mesto-api-full"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kirill Shilin",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/YellowBlueVase/react-mesto-api-full"
   },
   "homepage": "https://github.com/YellowBlueVase/react-mesto-api-full#readme",
   "devDependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -36,7 +29,6 @@
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
-    "jest": "^29.3.1",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
@@ -46,7 +38,6 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
