--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-mest",
+  "name": "react-mesto-api-full (frontend part)",
   "version": "0.1.0",
   "homepage": ".",
   "private": true,
