--- a/backend/package.json
+++ b/backend/package.json
@@ -21,20 +21,10 @@
   },
   "homepage": "https://github.com/YellowBlueVase/react-mesto-api-full#readme",
   "devDependencies": {
-    "celebrate": "^15.0.1",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "express": "^4.18.2",
-    "express-winston": "^4.2.0",
-    "joi-objectid": "^4.0.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.3",
-    "nodemon": "^2.0.20",
-    "validator": "^13.7.0",
-    "winston": "^3.8.2"
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
